# Omi

./: .gitmodules  CMakeLists.txt  Omi.cpp  Omi.h  config.hpp.in  geompack.c  geompack.h  json_stuff.cpp  json_stuff.hpp  misc.cpp  misc.hpp  object.cpp  object.hpp  points1.json  points2.json  points3.json  points4.json  render_window.cpp  render_window.hpp  shader1.frag  shader1.vert  window_manager.cpp  window_manager.hpp
glad_core/include/KHR/: khrplatform.h
glad_core/include/glad/: glad.h
glad_core/src/: glad.c
